--- a/01 Starting Project/.github/workflows/deploy.yml
+++ b/01 Starting Project/.github/workflows/deploy.yml
@@ -9,15 +9,9 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
+      - name: Cache dependencies from custom action
+        uses: ./.github/Actions/Cache_Dependency
+        
       - name: Lint code
         run: npm run lint
   test:
@@ -25,15 +19,8 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
+      - name: Cache dependencies from custom action
+        uses: ./.github/Actions/Cache_Dependency
       - name: Test code
         id: run-tests
         run: npm run test
@@ -49,15 +36,8 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
+      - name: Cache dependencies from custom action
+        uses: ./.github/Actions/Cache_Dependency
       - name: Build website
         run: npm run build
       - name: Upload artifacts
